--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
     <div class="navbar__container">
         <a href="#"><h1 class="home_title">TecnoShop</h1></a>
         <i id="iconoMenu" class='bx bx-menu menu--principal'></i>
-        <input class="barra_busqueda">
+        <div class="input_search">
+            <input class="barra_busqueda" id="searchInput">
+            <button class="barra_busqueda_boton" id="searchButton"><i class='bx bx-search'></i></button>
+        </div>
         <div id="menu" class="menu">
             <a  class="menu__link inicio--sesion inicioSesion" >Inicia Sesión</a>
             <a class="menu__link registro registrate" >Registrate</a>
@@ -46,14 +49,14 @@
             <button class="buttonRegistro registrate">Registrate</button>
         </div>
         <div class="menu--categorias">
-            <h2 class="categorias" id="celular">Moviles</h2>
-            <h2 class="categorias" id="computador">Computación</h2>
-            <h2 class="categorias" id="televisor">Televisión</h2>
-            <h2 class="categorias" id="video"> Video</h2>
-            <h2 class="categorias" id="consola">Consolas</h2>
-            <h2 class="categorias" id="audio">Audio</h2>
-            <h2 class="categorias" id="almacenamiento">Almacenamiento</h2>
-            <h2 class="categorias" id="descuentos">Descuentos</h2>
+            <h2 class="categorias" id="celular">Moviles <i class='bx bxs-chevron-right categoria-right'></i></h2>
+            <h2 class="categorias" id="computador">Computación <i class='bx bxs-chevron-right categoria-right'></i></h2>
+            <h2 class="categorias" id="televisor">Televisión <i class='bx bxs-chevron-right categoria-right'></i></h2>
+            <h2 class="categorias" id="video"> Video <i class='bx bxs-chevron-right categoria-right'></i></h2>
+            <h2 class="categorias" id="consola">Consolas <i class='bx bxs-chevron-right categoria-right'></i></h2>
+            <h2 class="categorias" id="audio">Audio <i class='bx bxs-chevron-right categoria-right'></i></h2>
+            <h2 class="categorias" id="almacenamiento">Almacenamiento <i class='bx bxs-chevron-right categoria-right'></i></h2>
+            <h2 class="categorias" id="descuento">Descuentos <i class='bx bxs-chevron-right categoria-right'></i></h2>
         </div>
     </div>
 </div>
@@ -114,6 +117,7 @@
 <div id="productos">
 </div>
 
+<!--------------------------------------------------------------------------------------------------------------->
 
 </body>
 </html>
@@ -123,4 +127,5 @@
 <script src="templates/assets/js/inicioSesion.js"></script>
 <script src="templates/assets/js/menuDesplegable.js"></script>
 <script src="templates/assets/js/funciones.js"></script>
+
 
