--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <link rel="stylesheet" href="templates/assets/css/cardProducto.css">
     <link rel="stylesheet" href="templates/assets/css/publicidadSlider.css">
     <link rel="stylesheet" href="templates/assets/css/index.css">
+    <link rel="stylesheet" href="templates/assets/css/carritoCompras.css">
+    <link rel="stylesheet" href="templates/assets/css/configuracion.css">
+    <link rel="stylesheet" href="templates/assets/css/publicidadCategorias.css">
+    <link rel="stylesheet" href="templates/assets/css/footer.css">
 <!-- estilos de letra Google fonts -------------------------------------------------------------------->
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 <!----------------------------------------------------------------------------------------------------->
@@ -32,6 +36,15 @@
         <div id="menu" class="menu">
             <a  class="menu__link inicio--sesion inicioSesion" >Inicia Sesión</a>
             <a class="menu__link registro registrate" >Registrate</a>
+            <!-- Menú desplegable -->
+            <div class="dropdown" style="display:none;">
+                <a href="javascript:void(0)" class="menu__link dropbtn"><h4 id="user-name"></h4><i class='bx bx-chevron-down'></i></a>
+                <div class="dropdown-content">
+                    <a class="menu__link configuracion">Mi Cuenta</a>
+                    <hr class="division-dropdown">
+                    <a href="#" id="logout" class="menu__link">Cerrar Sesión</a>
+                </div>
+            </div>
             <a class="menu__link" ><i class='bx bx-cart-alt carrito--compras'></i></a>
         </div>      
     </div>
@@ -49,13 +62,13 @@
             <button class="buttonRegistro registrate">Registrate</button>
         </div>
         <div class="menu--categorias">
-            <h2 class="categorias" id="celular">Moviles <i class='bx bxs-chevron-right categoria-right'></i></h2>
-            <h2 class="categorias" id="computador">Computación <i class='bx bxs-chevron-right categoria-right'></i></h2>
-            <h2 class="categorias" id="televisor">Televisión <i class='bx bxs-chevron-right categoria-right'></i></h2>
-            <h2 class="categorias" id="video"> Video <i class='bx bxs-chevron-right categoria-right'></i></h2>
-            <h2 class="categorias" id="consola">Consolas <i class='bx bxs-chevron-right categoria-right'></i></h2>
-            <h2 class="categorias" id="audio">Audio <i class='bx bxs-chevron-right categoria-right'></i></h2>
-            <h2 class="categorias" id="almacenamiento">Almacenamiento <i class='bx bxs-chevron-right categoria-right'></i></h2>
+            <h2 class="categorias" id="celular1">Moviles <i class='bx bxs-chevron-right categoria-right'></i></h2>
+            <h2 class="categorias" id="computador1">Computación <i class='bx bxs-chevron-right categoria-right'></i></h2>
+            <h2 class="categorias" id="televisor1">Televisión <i class='bx bxs-chevron-right categoria-right'></i></h2>
+            <h2 class="categorias" id="video1"> Video <i class='bx bxs-chevron-right categoria-right'></i></h2>
+            <h2 class="categorias" id="consola1">Consolas <i class='bx bxs-chevron-right categoria-right'></i></h2>
+            <h2 class="categorias" id="audio1">Aaudio <i class='bx bxs-chevron-right categoria-right'></i></h2>
+            <h2 class="categorias" id="almacenamiento1">Almacenamiento <i class='bx bxs-chevron-right categoria-right'></i></h2>
             <h2 class="categorias" id="descuento">Descuentos <i class='bx bxs-chevron-right categoria-right'></i></h2>
         </div>
     </div>
@@ -94,12 +107,46 @@
     </div>
 </div>
 
-<!-- Slider Publicidad------------------------------------------------------------------------------------------->
+<!-- Configuración user --------------------------------------------------------------------------------------->
+<div class="configuracion-content">
+    <div class="registro--card">
+        <h1 class="inicio-sesion-saludo">Datos Personales</h1>
+        <i class='bx bx-x cerrar cerrarConfiguracion'></i>
+        <form class="form-content" id="updateUserForm">
+            <label class="configuracion-titulo" for="updateNombre">Nombre</label>
+            <input class="configuracion-input" type="text" id="updateNombre" name="nombre"><br>
+            <label class="configuracion-titulo" for="updateCorreo">Correo</label>
+            <input class="configuracion-input" type="text" id="updateCorreo" name="correo"><br>
+            <label class="configuracion-titulo" for="updateDocumento">Documento</label>
+            <input class="configuracion-input" type="text" id="updateDocumento" name="documento"><br>
+            <label class="configuracion-titulo" for="updateTelefono">Teléfono</label>
+            <input class="configuracion-input" type="text" id="updateTelefono" name="telefono"><br>
+            <label class="configuracion-titulo" for="updateCiudad">Ciudad</label>
+            <input class="configuracion-input" type="text" id="updateCiudad" name="ciudad"><br>
+            <button class="registro-boton" type="button" id="guardarCambios">Guardar</button>
+            <button class="registro-boton delete-confi" type="button" id="eliminarUser">Eliminar</button>
+        </form>
+    </div>
+</div>
+
+<!-- Carrito de Compras------------------------------------------------------------------------------------------>
+<div class="cart-content">
+    <div class="cart-card">
+        <div class="cerrarCarrito--content">
+            <h2 class="carrito--saludo">Resumen Carrito</h2>
+            <i class='bx bx-x cerrar cerrarCarrito'></i>
+        </div>
+        <button class="carrito-boton">Comprar</button>
+    </div>
+</div>
+<!-- Slider Publicidad------------------------------------------------------------------------------------------>
 <section class="container-carousel-publicidad">
     <div class="container-carousel">
         <div class="carruseles" id="slider">
             <div class="slider-section">
-                <img id="imagen1" alt="">
+                <a href="">
+                    <img id="imagen1" alt="">
+                </a>
             </div>
             <div class="slider-section">
                 <img id="imagen2" alt="">
@@ -111,13 +158,38 @@
         <i class='bx bxs-chevron-left btn-left'></i>
         <i class='bx bxs-chevron-right btn-rigth'></i>
     </div>
+    <h1 class="mensaje_carga">Cargando imagen ...</h1>
 </section>
 
-<!-- Card Producto ---------------------------------------------------------------------------------------------->
-<div id="productos">
-</div>
+<!-- Publicidad categorias------------------------------------------------------------------------------------->
+<section class="container-img-categorias">
+    <div class="img-categorias">
+        <img src="./photos/Celulares.jpg" alt="Celulares" id="celular2">
+        <img src="./photos/Computacion.png" alt="Computación" id="computador2">
+        <img src="./photos/Television.png" alt="Televisión" id="televisor2">
+        <img src="./photos/Video.png" alt="Video" id="video2">
+        <img src="./photos/Consolas.png" alt="Consolas" id="consola2">
+        <img src="./photos/Audio.png" alt="Audio" id="audio2">
+        <img src="./photos/Almacenamiento.png" alt="Almacenamiento" id="almacenamiento2">
+    </div>
+</section>
 
-<!--------------------------------------------------------------------------------------------------------------->
+<!-- Footer------------------------------------------------------------------------------------->
+<footer class="footer-container">
+    <h1 class="footer-name">TecnoShop</h1>
+    <hr class="footer-division">
+    <div class="infoContacto">
+        <h3>Redes sociales</h3>
+        <div class="redes-container">
+            <a  class="linkedin" href="https://www.linkedin.com/in/walter-eduardo-daza-5122a2179/" target="_blank"><i class='bx bxl-linkedin-square'></i> Linkedin</a>
+            <a>- </a>
+            <a>walred44@hotmail.com</a> 
+        </div>
+        <h2 class="autor">Hecho con ♥ por Walter Daza</h2>
+        <p>© Todos los derechos reservados</p>
+    </div>
+</footer>
+<!-------------------------------------------------------------------------------------------------------------->
 
 </body>
 </html>
@@ -127,5 +199,5 @@
 <script src="templates/assets/js/inicioSesion.js"></script>
 <script src="templates/assets/js/menuDesplegable.js"></script>
 <script src="templates/assets/js/funciones.js"></script>
-
-
+<script src="templates/assets/js/carritoCompras.js"></script>
+<script src="templates/assets/js/configuracion.js"></script>
